# masterthesis_genai_spatialplan

./: .gitignore  LICENSE  README.md  activate.ps1  activate.sh  config.yml  environment.yml  pyproject.toml  pytorch_environment.yml
.github/: copilot-instructions.md
code/: data_acquisition_processing.ipynb  test_datasets.ipynb  test_diffusion_model.ipynb  test_gan.ipynb
code/archive/: M2M_Bands_Bundles_BandGroups_Download_v5.ipynb  experiment_with_duckdb.ipynb
code/data_acquisition/: config.yml  osm_to_xarray.ipynb  planetscope_to_xarray.ipynb
code/data_acquisition/cube/: combine.py  corine.py  metropolitan_regions.py  rasterize.py  reproject.py  urban_zones.py  vectorize.py
code/data_acquisition/exploration/: region_set_data_collection.ipynb
code/data_acquisition/osm/: process.py  request.py
code/data_acquisition/slurm/: acquire_model_data.sh  combine_datasets.py  combine_datasets.sh  combine_planetscope_xarrays.py  combine_planetscope_xarrays.sh  combine_region_datasets.py  combine_region_datasets.sh  landsat_to_xarray.py  landsat_to_xarray.sh  osm_to_xarray.py  osm_to_xarray.sh  submit_pipeline.py  (+6 more)
code/helpers/: bbox.py  get_region_filenames.py  get_timeid_filenames_planet.py  indexed_outputs.py  landsat_config.py  load_configs.py  read_yaml.py  submit_job.py
code/masterthesis_genai_spatialplan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code/model/: QUICK_REFERENCE.md  cond_latent_diffusion.ipynb  opencv_inpainting.ipynb  test_gan.py  test_unet.ipynb
data/dwd/: KL_Tageswerte_Beschreibung_Stationen.txt
data/processed/: ghsl_regions.parquet
(+46 files in other folders)
