[project]
name = "masterthesis-genai-spatialplan"
version = "0.1.0"
description = ""
authors = [
    {name = "janneskruse",email = "jannes.kruse@rwth-aachen.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow[and-cuda] (>=2.18.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pydot (>=3.0.4,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
