[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masterthesis_genai_spatialplan"
version = "0.1.0"
description = "Generative AI for Spatial Planning using Satellite images"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jannes Kruse"}
]

dependencies = [
    # Dependencies are managed via environment.yml
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]
